KubernetesDeployment/IngfustructureTemplate.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: IaC

Parameters:
  devopsKeyPairName:
    Type: String
    Description: Name of the EC2 Key Pair to associate with the instance
    Default: DevOps-key
  devopsEC2AmiId:
    Type: AWS::EC2::Image::Id
    Description: ID of the Amazon Machine Image (AMI) to use
    Default: ami-0fc5d935ebf8bc3bc

Resources: 
  devopsVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: 'devops-vpc'

  devopsPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      # if not specified, aws should select it automatically
      # AvailabilityZone: !Sub ${AWS::Region}a
      VpcId: !Ref devopsVPC
      CidrBlock: 10.0.1.0/24
      Tags:
        - Key: Name
          Value: 'devops-public-subnet'

  devopsInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: 'devops-internet-gateway'
  
  attachInternetGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref devopsVPC
      InternetGatewayId: !Ref devopsInternetGateway

  devopsPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref devopsVPC
      Tags:
        - Key: Name
          Value: 'devops-public-route-table'

  devopsRouteToInternetGetway:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref devopsPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref devopsInternetGateway

  publicRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref devopsPublicSubnet
      RouteTableId: !Ref devopsPublicRouteTable

  devopsPublicInstanceSecutiryGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: 'devops-public-instance-secutiry-group'
      GroupDescription: 'for public instance'
      VpcId: !Ref devopsVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 6443
          ToPort: 6443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 30000
          ToPort: 30000
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 30001
          ToPort: 30001
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 10250
          ToPort: 10250 # to be able to exec -it <pod-name> -- /bin/bash
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: 'devops-public-instance-secutiry-group'

  devopsSSHSecutiryGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: 'devops-ssh-security-group'
      GroupDescription: 'for ssh'
      VpcId: !Ref devopsVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: 'devops-ssh-security-group'

  devopsPublicEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref devopsKeyPairName
      DisableApiTermination: false
      ImageId: !Ref devopsEC2AmiId
      InstanceType: t3.small
      Monitoring: false
      NetworkInterfaces:
        - AssociatePublicIpAddress: 'true'
          DeleteOnTermination: 'true'
          SubnetId: !Ref devopsPublicSubnet
          DeviceIndex: '0'
          GroupSet:
            - !Ref devopsPublicInstanceSecutiryGroup
            - !Ref devopsSSHSecutiryGroup
      UserData: !Base64 |
        #!/bin/bash -ex
        # put your script here
      Tags:
        - Key: Name
          Value: master-node

  devopsPublicEC2Instance2:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: !Ref devopsKeyPairName
      DisableApiTermination: false
      ImageId: !Ref devopsEC2AmiId
      InstanceType: t3.small
      Monitoring: false
      NetworkInterfaces:
        - AssociatePublicIpAddress: 'true'
          DeleteOnTermination: 'true'
          SubnetId: !Ref devopsPublicSubnet
          DeviceIndex: '0'
          GroupSet:
            - !Ref devopsPublicInstanceSecutiryGroup
            - !Ref devopsSSHSecutiryGroup
      UserData: !Base64 |
        #!/bin/bash -ex
        # put your script here
      Tags:
        - Key: Name
          Value: worker-node
